styles/style.css
/* ... */
:root[light-dark-colors="light"] {
  --text: var(--truG6);
  --text-alt-faded: var(--colG4);
  --text-alt-bright: var(--indi5);
  --text-alt-title: var(--truG9);
  --bg: var(--white);
  --bg-img: none
  --bg-img-size: 0;
  --header-text: var(--colG2);
  --header-bg: var(--truG9);
  --nav-text: var(--truG9);
  --nav-bg: var(--colG2);
  --mob-nav-button-text: var(--colG2);
  --mob-nav-button-bg: var(--truG9);
  --mob-nav-button-bg-hover: var(--colG3);
  --social-media-icon-bg-hover: var(--accent);
  --social-media-icon-bg: var(--colG5);
  --footer-text: var(--colG5);
  --footer-bg: var(--colG3);
  --button-text: var(--colG2);
  --button-bg: var(--fuch4);
  --button-bg-hover: var(--fuch5);
  --light-dark-colors-button-bg: var(--colG8);
  --light-dark-colors-button-bg-hover: var(--colG7);
  --form-bg: var(--colG3);
  --form-bg-focus: var(--colG2);
  --form-text: var(--gray8);
  --form-text-placeholder: var(--colG5);
  --partner-logo-bg: var(--colG1);
  --accent-home: var(--pink4);
  --accent-resume: var(--cyan5);
  --accent-writing: var(--oran4);
  --accent-contact: var(--emer5);
  --light-dark-text-weight-adjust: 400;
  --light-dark-nav-text-weight-adjust: 450;
}

:root[light-dark-colors="dark"] .dark-hidden {display: none;}
:root[light-dark-colors="dark"] {
  --text: var(--colG3);
  --text-alt-faded: var(--colG4);
  --text-alt-bright: var(--liBl3);
  --text-alt-title: var(--colG2);
  --bg: var(--gray9);
  --bg-img: url("../assets/backgrounds/dflowers-clear-1280.png");
  --bg-img-size: 1280px;
  --header-text: var(--colG2);
  --header-bg: var(--truG9);
  --nav-text: var(--colG2);
  --nav-bg: var(--gray8);
  --mob-nav-button-text: var(--colG2);
  --mob-nav-button-bg: var(--truG9);
  --mob-nav-button-bg-hover: var(--bg);
  --social-media-icon-bg-hover: var(--accent);
  --social-media-icon-bg: var(--gray8);
  --footer-text: var(--gray7);
  --footer-bg: var(--gray9);
  --button-text: var(--colG2);
  --button-bg: var(--cyan6);
  --button-bg-hover: var(--cyan5);
  --light-dark-colors-button-bg: var(--cyan6);
  --light-dark-colors-button-bg-hover: var(--cyan5);
  --form-bg: var(--gray8);
  --form-bg-focus: var(--gray9);
  --form-text: var(--colG4);
  --form-text-placeholder: var(--colG5);
  --partner-logo-bg: var(--colG2);
  --accent-home: var(--pink5);
  --accent-resume: var(--cyan6);
  --accent-writing: var(--oran5);
  --accent-contact: var(--emer6);
  --light-dark-text-weight-adjust: 350;
  --light-dark-nav-text-weight-adjust: 400;
}

:root[light-dark-colors="light"]#home-page {
  --accent: var(--pink4);
}
:root[light-dark-colors="light"]#resume-page {
  --accent: var(--cyan5);
}
:root[light-dark-colors="light"]#writing-page {
  --accent: var(--oran4);
}
:root[light-dark-colors="light"]#contact-page {
  --accent: var(--emer5);
}
:root[light-dark-colors="dark"]#home-page {
  --accent: var(--pink5);
}
:root[light-dark-colors="dark"]#resume-page {
  --accent: var(--cyan6);
}
:root[light-dark-colors="dark"]#writing-page {
  --accent: var(--oran5);
}
:root[light-dark-colors="dark"]#contact-page {
  --accent: var(--emer6);
}

:root {
  --rad: 2px;
}

/* RESET
8888888b.  8888888888  .d8888b.  8888888888 88888888888 
888   Y88b 888        d88P  Y88b 888            888     
888    888 888        Y88b.      888            888     
888   d88P 8888888     "Y888b.   8888888        888     
8888888P"  888            "Y88b. 888            888     
888 T88b   888              "888 888            888     
888  T88b  888        Y88b  d88P 888            888     
888   T88b 8888888888  "Y8888P"  8888888888     888     */

html,
body {
  margin: 0;
  padding: 0;
  background: var(--bg);
}

*,
*:before,
*:after {
  font-family: 'Roboto', sans-serif;
  font-family: 'Rubik', sans-serif;
  font-size: 16px;
  color: var(--text);
  margin: 0;
  padding: 0;
}

h1,h2,h3,h4,h5,h6,li,ol,p,ul{font-style:normal;text-decoration:none}h1,h2,h3,h4,h5,h6{font-weight:400}h1{font-size:2.5rem}h2{font-size:2.25rem}h3{font-size:2rem}h4{font-size:1.75rem}h5{font-size:1.5rem}h6{font-size:1.25rem}

p, ul, ol, li, li > span {
  font-size: 17px;
  line-height: 1.75rem;
  font-weight: var(--light-dark-text-weight-adjust);
  letter-spacing: .02rem;
}

/* a {
  letter-spacing: .05rem;
} */

.p-plus > span {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.light {
  font-weight: lighter;
}

.upcase {
  /* font-family: 'Roboto Condensed', sans-serif; */
  text-transform: uppercase;
  letter-spacing: .1rem;
}

.italic {
  font-style: italic;
}

.title {
  font-weight: var(--light-dark-nav-text-weight-adjust);
}

.transparent {
  opacity: 50%;
}

/* GRID
 .d8888b.  8888888b.  8888888 8888888b.  
d88P  Y88b 888   Y88b   888   888  "Y88b 
888    888 888    888   888   888    888 
888        888   d88P   888   888    888 
888  88888 8888888P"    888   888    888 
888    888 888 T88b     888   888    888 
Y88b  d88P 888  T88b    888   888  .d88P 
 "Y8888P88 888   T88b 8888888 8888888P"  */

.main-head {grid-area: hdm;}
.main-head-left {grid-area: hdl;}
.main-head-right {grid-area: hdr;}
.main-nav {grid-area: nav;}
.content-1-col {grid-area: cnt;}
.side-left {grid-area: sbl;}
.side-right {grid-area: sbr;}
.main-footer {grid-area: ftm;}
.main-footer-left {grid-area: ftl;}
.main-footer-right {grid-area: ftr;}

.wrapper {
  display: grid;
  grid-template-columns: 1fr fit-content(800px) 1fr;
  grid-template-areas:
  "hdl hdm hdr"
  "nav nav nav"
  "sbl cnt sbr"
  "ftl ftm ftr";
  background-image: var(--bg-img);
  background-position: left;
  background-size: var(--bg-img-size);
  background-repeat: repeat;
  background-attachment: fixed;
}

.side-right,
.side-left {
  background: none;
}
/* ... */

